Fixed image stretching bug;

--- a/css/main.css
+++ b/css/main.css
@@ -266,10 +266,9 @@ i {
 }
 
 .photo {
+    object-fit: cover;
     width: 100%;
     height: 170px;
-    background-repeat: no-repeat;
-    background-size: cover;
     margin-top: 2rem; 
     margin-left: 0;
     border-bottom: 2px solid var(--main-orange);
@@ -293,6 +292,18 @@ figcaption {
         justify-content: space-evenly;
         padding-right: 1rem;
         align-items: center;
+    }
+
+    #myMenu a {
+        margin: 3px;
+    }
+
+    #myMenu a:hover,
+    #myMenu a:focus {
+        border: 1px solid var(--main-white) !important;
+        border-radius: 5px;
+        color: var(--main-white);
+        background-color: var(--main-orange) !important;
     }
 
     .topNav {
@@ -325,6 +336,11 @@ figcaption {
     }
     .photo {
         height: 340px;
+    }
+}
 
+@media screen and ( min-width: 1100px ) {
+    .photo {
+        height: 420px;
     }
 }
